crates/php-parser/tests/snapshots/integration__fiber_variants.snap
---
source: crates/php-parser/tests/integration.rs
expression: "category_snapshot(\"fiber\")"
---
=== fiber create and start ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "fiber"
                },
                "span": {
                  "start": 6,
                  "end": 12
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "New": {
                    "class": {
                      "kind": {
                        "Identifier": "Fiber"
                      },
                      "span": {
                        "start": 19,
                        "end": 24
                      }
                    },
                    "args": [
                      {
                        "name": null,
                        "value": {
                          "kind": {
                            "Closure": {
                              "is_static": false,
                              "by_ref": false,
                              "params": [],
                              "use_vars": [],
                              "return_type": {
                                "kind": {
                                  "Named": {
                                    "parts": [
                                      "void"
                                    ],
                                    "kind": "Unqualified",
                                    "span": {
                                      "start": 37,
                                      "end": 41
                                    }
                                  }
                                },
                                "span": {
                                  "start": 37,
                                  "end": 41
                                }
                              },
                              "body": [
                                {
                                  "kind": {
                                    "Expression": {
                                      "kind": {
                                        "StaticMethodCall": {
                                          "class": {
                                            "kind": {
                                              "Identifier": "Fiber"
                                            },
                                            "span": {
                                              "start": 44,
                                              "end": 49
                                            }
                                          },
                                          "method": "suspend",
                                          "args": [
                                            {
                                              "name": null,
                                              "value": {
                                                "kind": {
                                                  "String": "hello"
                                                },
                                                "span": {
                                                  "start": 59,
                                                  "end": 66
                                                }
                                              },
                                              "unpack": false,
                                              "by_ref": false,
                                              "span": {
                                                "start": 59,
                                                "end": 66
                                              }
                                            }
                                          ]
                                        }
                                      },
                                      "span": {
                                        "start": 44,
                                        "end": 67
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 44,
                                    "end": 69
                                  }
                                }
                              ],
                              "attributes": []
                            }
                          },
                          "span": {
                            "start": 25,
                            "end": 70
                          }
                        },
                        "unpack": false,
                        "by_ref": false,
                        "span": {
                          "start": 25,
                          "end": 70
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 15,
                  "end": 71
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 71
          }
        }
      },
      "span": {
        "start": 6,
        "end": 73
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "val"
                },
                "span": {
                  "start": 73,
                  "end": 77
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "MethodCall": {
                    "object": {
                      "kind": {
                        "Variable": "fiber"
                      },
                      "span": {
                        "start": 80,
                        "end": 86
                      }
                    },
                    "method": {
                      "kind": {
                        "Identifier": "start"
                      },
                      "span": {
                        "start": 88,
                        "end": 93
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 80,
                  "end": 95
                }
              }
            }
          },
          "span": {
            "start": 73,
            "end": 95
          }
        }
      },
      "span": {
        "start": 73,
        "end": 96
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 96
  }
}
=== fiber resume ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "Variable": "fiber"
                },
                "span": {
                  "start": 6,
                  "end": 12
                }
              },
              "method": {
                "kind": {
                  "Identifier": "resume"
                },
                "span": {
                  "start": 14,
                  "end": 20
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "String": "world"
                    },
                    "span": {
                      "start": 21,
                      "end": 28
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 21,
                    "end": 28
                  }
                }
              ]
            }
          },
          "span": {
            "start": 6,
            "end": 29
          }
        }
      },
      "span": {
        "start": 6,
        "end": 30
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 30
  }
}
=== fiber get return ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "result"
                },
                "span": {
                  "start": 6,
                  "end": 13
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "MethodCall": {
                    "object": {
                      "kind": {
                        "Variable": "fiber"
                      },
                      "span": {
                        "start": 16,
                        "end": 22
                      }
                    },
                    "method": {
                      "kind": {
                        "Identifier": "getReturn"
                      },
                      "span": {
                        "start": 24,
                        "end": 33
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 16,
                  "end": 35
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 35
          }
        }
      },
      "span": {
        "start": 6,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
=== fiber is terminated ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "MethodCall": {
                "object": {
                  "kind": {
                    "Variable": "fiber"
                  },
                  "span": {
                    "start": 10,
                    "end": 16
                  }
                },
                "method": {
                  "kind": {
                    "Identifier": "isTerminated"
                  },
                  "span": {
                    "start": 18,
                    "end": 30
                  }
                },
                "args": []
              }
            },
            "span": {
              "start": 10,
              "end": 32
            }
          },
          "then_branch": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 34,
              "end": 36
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
=== fiber suspend static ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "val"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "StaticMethodCall": {
                    "class": {
                      "kind": {
                        "Identifier": "Fiber"
                      },
                      "span": {
                        "start": 13,
                        "end": 18
                      }
                    },
                    "method": "suspend",
                    "args": [
                      {
                        "name": null,
                        "value": {
                          "kind": {
                            "Int": 42
                          },
                          "span": {
                            "start": 28,
                            "end": 30
                          }
                        },
                        "unpack": false,
                        "by_ref": false,
                        "span": {
                          "start": 28,
                          "end": 30
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 13,
                  "end": 31
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 31
          }
        }
      },
      "span": {
        "start": 6,
        "end": 32
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 32
  }
}
=== fiber is started ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "Variable": "fiber"
                },
                "span": {
                  "start": 6,
                  "end": 12
                }
              },
              "method": {
                "kind": {
                  "Identifier": "isStarted"
                },
                "span": {
                  "start": 14,
                  "end": 23
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 6,
            "end": 25
          }
        }
      },
      "span": {
        "start": 6,
        "end": 27
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "Variable": "fiber"
                },
                "span": {
                  "start": 27,
                  "end": 33
                }
              },
              "method": {
                "kind": {
                  "Identifier": "isRunning"
                },
                "span": {
                  "start": 35,
                  "end": 44
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 27,
            "end": 46
          }
        }
      },
      "span": {
        "start": 27,
        "end": 48
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "MethodCall": {
              "object": {
                "kind": {
                  "Variable": "fiber"
                },
                "span": {
                  "start": 48,
                  "end": 54
                }
              },
              "method": {
                "kind": {
                  "Identifier": "isSuspended"
                },
                "span": {
                  "start": 56,
                  "end": 67
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 48,
            "end": 69
          }
        }
      },
      "span": {
        "start": 48,
        "end": 70
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 70
  }
}
